src/styles/sass/main.scss
// Variables & Mixins etc.

// Colors
@import "colors";
// Type
@import "type";

// Navigation Control
// Temp grayscaling for ease of styling...
body {
  // filter: grayscale(1);
  // filter: grayscale(0);
  font-family: $sans-serif-stack;
  font-size: $basefont;
  margin: 0 auto !important;

  @media (min-width: 45rem) {
    width: 40rem;
  }
}

ul li {
  list-style: none;
}

button {
  background: $nypl-white;
  border: 0.0625rem solid $nypl-blue-dark;
  border-radius: 0.3125rem;
  color: $nypl-blue-dark;
  font-size: 1rem;
  padding: 0.35rem 0.35rem 0.2rem;
  -webkit-appearance: none;
}

a {
  color: $nypl-blue-dark;
  text-decoration: none;
}

.controls {
  color: $nypl-blue-dark;
  //font-size: $basefont;
  position: fixed;
  right: 0;
  top: 0;
  width: 100%;

  .links {
    background-color: $nypl-white;
    height: inherit;
    list-style-type: none;
    margin: 0;
    position: relative;
    padding: 0.125rem;
    text-align: center;

    .icon {
      color: $nypl-blue-dark;
      fill: $nypl-blue-dark;
      height: 1.5rem;
      width: 1.5rem;
    }

    .setting-text {
      display: none;
      position: relative;
      top: -0.4rem;

      @media (min-width: 30rem) {
        display: inline-block;
      }

      &.contents {
        top: -0.55rem;

        @media (min-width: 30rem) {
          display: inline-block;
          position: relative;
          top: -0.35rem;
        }
      }
    }

    &.top {
      background-color: $nypl-white;
      border-bottom: 1px solid $nypl-blue-dark;
      height: 2.9rem;

      li:nth-child(1) {
        display: none;
      }

      li:nth-child(3) {
        float: right;
      }
    }
    // Bottom Controls
    // the, fixed bar and the arrows.
    &.bottom {
      background-color: darken($nypl-white, 2.5%);
      border-top: 0.16rem solid $nypl-blue-dark;
      bottom: 0;
      display: block;
      height: 2.2rem;
      padding-top: 0.625rem;
      position: fixed;
      width: 100%;

      @media (min-width: 30rem) {
        padding-top: 0;
        }

      li {
        border: 0;
        float: none;
        padding: 0;

        @media (min-width: 30rem) {
          &:nth-child(1) {
            float: left;
          }

          &:nth-child(3) {
            float: right;
          }
        }
      }

      // The Chapters label found only on mobile
      li[aria-label="chapters"] {
        margin: 0 20%;
        position: relative;
        top: -0.34rem;
        text-align: center;

        @media (min-width: 30rem) {
          display: none;
          }
        }

      @media (min-width: 30rem) {
        //background: lighten($nypl-blue-dark, 50%);
        }

      .icon {
        height: 1.5rem;
        width: 1.5rem;

        @media (min-width: 30rem) {
          position: relative;
          top: 0.375rem;
        }
      }

      .chapter-control {
        display: none;

        @media (min-width: 30rem) {
          display: inline-block;
          }
        }
      }
    }

  ul li {
    // border: 0.0625rem solid $nypl-blue-dark;
    // border-radius: 0.3125rem;
    display: inline-block;
    float: left;
    padding: 0.2rem 0.65rem 0;
    margin: 0 0.625rem;

    // @media (min-width: 30rem) {
    //   border: 1px solid $nypl-white;
    // }
  }

  // button,
  // a {
  //   color: $nypl-blue-dark;
  //   text-decoration: none;
  //   }
}

.loading {
  background-color: darken($nypl-white, 2.5%);
  border: 1px solid $nypl-blue;
  border-radius: 0.3125rem;
  color: $nypl-blue;
  font-family: $sans-serif-stack;
  height: 2.5rem;
  left: calc(50% - 6.25rem);
  padding-top: 1.25rem;
  position: fixed;
  text-align: center;
  top: calc(50% - 6.25rem);
  width: 12.5rem;
}

.controls-view {
  font-family: $sans-serif-stack;
  font-size: $basefont;
  height: calc(100% - 2rem);
  left: 0;
  overflow: scroll;
  position: fixed;
  top: 3.5rem;
  width: 100%;
  -webkit-overflow-scrolling: touch;

  @media (min-width: 30rem) {
    //top: 4.4rem;
  }

  .disabled {
    background-color: darken($nypl-blue, 20%);
    }
  }
// /controls-view

@warn  "Move TOC section to a partial";
//////////////////////////////
// Table of Contents Sytles //
//////////////////////////////
.contents-view {
  background-color: $nypl-white;

  ul li {
    border-bottom: 1px solid darken($nypl-white, 20%);
    margin-top: 0;
    width: 90%;

    &:hover {
      background: $nypl-blue-dark;
    }

    a {
      color: $nypl-blue-dark;
      display: block;
      padding: 1rem;
      text-decoration: none;
      width: 90%;

      &:hover {
        color: $nypl-white;
      }

      &.active {
        background: lighten($nypl-blue, 30%);
        color: $nypl-black;
        width: initial;
      }

      &.active:hover {
        background: $nypl-black;
        color: lighten($nypl-blue, 30%);
      }
    }
  }
}
/// / TOC //

@warn  "Move Setting section to a partial";
//////////////////////////////
// Settings View Sytles     //
//////////////////////////////
.settings-view {

  > .settings-menu {
    background-color: transparentize($nypl-lighter-gray, 0.05);
    border-bottom: 1px solid $nypl-blue-dark;
    left: 0;
    margin: 0.25rem 0 0;
    padding: 0 1rem;
    position: relative;


    @media (min-width: 60rem) {
      border-bottom: 1px solid $nypl-blue-dark;
      width: 100%;
    }

    .enable-offline {
      //margin-top: 0.35rem;

      // @media (min-width: 60rem) {
      //   width: 52%;
      // }
    }

    button {
      border: 0.0625rem solid $nypl-blue-dark;
      border-radius: 0.375rem;
      padding: 0.35rem;

      @media (min-width: 60rem) {
        width: auto;
      }

      // reverse the active state
      &.active {
        color: $nypl-white;
        background-color: $nypl-blue-dark;
      }
    }

    > li {
      border: 0;
      color: $nypl-blue-dark;
      display: inline-block;
      margin: 0.5rem 0.3rem 0.5rem 0;
      padding: 0;
      vertical-align: text-bottom;
      width: auto;

      @media (min-width: 60rem) {
        display: inline-block;
        margin-right: 1%;
      }
    }

    > li:nth-child(3) {
      margin-right: 0;
    }

    .settings-options {
      padding-left: 0;

      @media (min-width: 60rem) {
        width: 100%;
      }

      li {
        border: 0;
        display: inline-block;
        margin: 0;
        //padding: 0 0 0.25rem;
        width: auto;
      }

      .font-setting {
        //padding: 0 0.3rem 0 0;
        vertical-align: text-bottom;
      }

      .increase {
        font-size: 1.3rem;
        padding: 0.2rem 0.69rem;
      }

      .decrease {
        font-size: 0.8rem;
        padding: 0.475rem 0.75rem;
      }
    }
  }
}

